feat: implement full-stack e-commerce system including products, orders, cart, reviews, and checkout features